[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest"]

[project]
authors = [{ name = "Jacob Hayes", email = "jrh@jacobhayes.dev" }]
description = "A mapping that returns the key if no value is found."
license = "MIT"
name = "mirror-dict"
readme = "README.md"
requires-python = ">=3"
version = "1.0.2"

[project.urls]
Repository = "https://github.com/JacobHayes/pymiscuous/tree/master/mirror-dict"
